--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -7,7 +7,7 @@
   <string name="action_change_units">وحدات التغيير</string>
   <string name="symbol_search">رمز البحث</string>
   <string name="content_test">بحث عن الأوراق المالية رمز</string>
-  <string name="input_hint">FB</string>
+  <string name="input_hint" translatable="false">FB</string>
   <string name="input_prefill"></string>
   <string name="network_toast">اه اوه! هذا التطبيق يتطلب اتصال بالإنترنت</string>
   <string name="history_line_head">الأسهم البيانات للعام الحالي</string>
@@ -24,5 +24,8 @@
   <string name="screen_Reader_error">حدث شيء خطأ غير متوقع</string>
   <string name="screen_Reader_error_internet">الاتصال بشبكة الانترنت لم يتم العثور على</string>
   <string name="error_no_internet">الانترنت قد لا تعمل، تظهر البيانات المحلية بدلا</string>
+  <string name="empty_view_text">الأسهم يتم تحميل</string>
+  <string name="fav_stock">Your Favourite Stocks</string>
+  <string name="stocks_toast">يتم حفظ هذه الأسهم بالفعل!</string>
 
 </resources>
